# CarDian

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml
app/auth/: jwt_token.py
app/background/: bot_tasks.py  celery_worker.py  lookups_processing_tasks.py  tasks.py  watchlists_tasks.py
app/models/: __init__.py  base.py  lookups.py  users.py  verdicts.py  watchlists.py
app/repo/: base_repo.py  lookups_repo.py  payments_repo.py  users_repo.py  verdicts_repo.py  watchlists_repo.py
app/schemas/: auth_schemas.py  base_schema.py  gemini_schemas.py  groq_schemas.py  lookup_enums.py  lookups_schemas.py  payment_schemas.py  prediction_schemas.py  price_alerts_schemas.py  stats_schema.py  users_schemas.py  verdicts_schemas.py  watchlists_schemas.py
app/services/: gemini_service.py  groq_service.py  parse_service.py  price_prediction.py
app/settings/: config.py  database.py  gemini_prompts.py  groq_prompts.py  redis.py
app/utils/: browsers.py  password_hasher.py  rate_limiter.py
frontend/: .cursorrules  .rules  about.html  admin_panel.html  docs.html  fix_headers.py  index.html  manual_lookups.html  parsed_lookups.html  privacy.html  profile.html  rewrite_headers.py  terms.html  validate.py  watchlists.html
frontend/css/: header.css  responsive.css  style.css
frontend/docs/: openapi.json
frontend/js/: main.js  menu.js
migrations/: env.py
migrations/versions/: 4de5ca64093a_adding_tables.py  62eb009a0483_initial_migr.py  7829b149f288_tables_correcting.py
ml/: result.txt
(+20 files in other folders)
